# AutoDriving-Planning-Control-Algorithm-Simulation-Carla

./: .gitignore  README.md  frames.gv  source_env.sh
src/l5player_controler/carla_l5player_bridge_ego_vis/: package.xml  setup.cfg  setup.py
src/l5player_controler/carla_l5player_bridge_ego_vis/carla_l5player_bridge_ego_vis/: carla_l5player_vis_ego_vehicle.py  longitudinal_control_pid.py  official_demo.py  reference_line_recorder.py
src/l5player_controler/carla_l5player_bridge_ego_vis/launch/: carla_bridge_ego_vehilce.launch.py  carla_l5player_vis_ego_vehicle.launch.py  carla_recorder_ego_vehicle.launch.py  command_control.launch.py  reference_line_recorder.launch.py
src/l5player_controler/carla_l5player_lqr_pid_controller/: CMakeLists.txt  package.xml
src/l5player_controler/carla_l5player_lqr_pid_controller/config/: lqr_parameters_configuration.yaml
src/l5player_controler/carla_l5player_lqr_pid_controller/include/carla_l5player_lqr_pid_controller/: .clang-format  lqr_controller.h  lqr_lateral_pid_longitudinal.h
src/l5player_controler/carla_l5player_lqr_pid_controller/launch/: lqr_launch.py
src/l5player_controler/carla_l5player_lqr_pid_controller/src/: lqr_controller.cpp  lqr_lateral_pid_longitudinal.cpp  pid_controller.cpp
src/l5player_controler/carla_l5player_mpc_controller/: CMakeLists.txt  package.xml
src/l5player_controler/carla_l5player_mpc_controller/config/: mpc_parameters_configuration.yaml
src/l5player_controler/carla_l5player_mpc_controller/include/carla_l5player_mpc_controller/: common.h  coordinate_transform.h  helpers.h  mpc_controller.h  mpc_lateral_longitudinal.h  reference_line.h  utils.h  waypoints.h
src/l5player_controler/carla_l5player_mpc_controller/launch/: mpc_launch.py
src/l5player_controler/carla_l5player_mpc_controller/rviz/: mpc_vis.rviz
src/l5player_controler/carla_l5player_mpc_controller/src/: mpc_controller.cpp  mpc_lateral_longitudinal.cpp  pid_controller.cpp  reference_line.cpp
src/l5player_controler/carla_l5player_pid_new_controller/: CMakeLists.txt  package.xml
src/l5player_controler/carla_l5player_pid_new_controller/config/: new_pid_parameters_configuration.yaml
src/l5player_controler/carla_l5player_pid_new_controller/launch/: new_pid_launch.py
src/l5player_controler/carla_l5player_pid_new_controller/src/: vehicle_longitudinal_controller_pid.cpp
src/l5player_controler/carla_l5player_stanley_pid_controller/: CMakeLists.txt  package.xml
src/l5player_controler/carla_l5player_stanley_pid_controller/data/: 2022_09_29_16_27_08_ins_data_map_after_preprocess.csv
src/l5player_controler/carla_l5player_stanley_pid_controller/include/carla_l5player_stanley_pid_controller/: common.h  reference_line.h  stanely_controller.h  vehicle_longitudinal_controller_pid.h
src/l5player_controler/carla_l5player_stanley_pid_controller/src/: pid_controller.cpp  reference_line.cpp  stanley_controller.cpp  vehicle_longitudinal_controller_pid.cpp
src/l5player_functions/carla_l5player_nop_with_python_script/: CMakeLists.txt  package.xml
src/l5player_functions/carla_l5player_nop_with_python_script/config/: new_pid_parameters_configuration.yaml
src/l5player_functions/carla_l5player_nop_with_python_script/data/: gps_data_2022_09_09_15_18_45.csv
src/l5player_functions/carla_l5player_nop_with_python_script/include/carla_l5player_pid_controller/: common.h  vehicle_longitudinal_controller_pid.h
src/l5player_functions/carla_l5player_nop_with_python_script/include/l5player_nop/: common.h  nop_function_node.h
src/l5player_functions/carla_l5player_nop_with_python_script/launch/: nop_launch.py
src/l5player_functions/carla_l5player_nop_with_python_script/rviz/: nop_vis.rviz
src/l5player_functions/carla_l5player_nop_with_python_script/src/: l5player_nop_main.cpp  l5player_nop_node.cpp  pid_controller.cpp  reference_line.cpp
src/l5player_functions/carla_l5player_nop_with_python_script/src/control/lqr/: lqr_controller.cpp  lqr_controller.h
src/l5player_functions/carla_l5player_nop_with_python_script/src/control/pid/: pid_controller.cpp
src/l5player_functions/carla_l5player_nop_with_python_script/src/control/stanely/: stanely_controller.h  stanley_controller.cpp
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/: planning.h  planning_base.h
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/common/: Config.cc  Configs.h  PlanningTarget.cc  PlanningTarget.h  box2d.cc  box2d.h  line_segment2d.cc  line_segment2d.h  math_utils.cc  math_utils.h  polygon2d.cc  polygon2d.h  vec2d.cc  vec2d.h
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/config/: configs.yaml
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/lattice/: collision_checker.cc  collision_checker.h  constraint_checker.cc  constraint_checker.h  end_condition_sampler.cc  end_condition_sampler.h  feasible_region.cc  feasible_region.h  lattice.cc  lattice.h  lattice_trajectory1d.cc  lattice_trajectory1d.h  path_time_graph.cc  path_time_graph.h  piecewise_acceleration_trajectory1d.cc  piecewise_acceleration_trajectory1d.h  piecewise_braking_trajectory_generator.cc  piecewise_braking_trajectory_generator.h  prediction_querier.cc  prediction_querier.h  trajectory1d_generator.cc  trajectory1d_generator.h  trajectory_combiner.cc  trajectory_combiner.h  trajectory_evaluator.cc  trajectory_evaluator.h
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/obstacle/: Ob_prediction_trajectory.cc  Ob_prediction_trajectory.h  ObjectDecision.h  Obstacle.cc  Obstacle.h  Obstacle_avoid.cc  Obstacle_avoid.h  boundarys.cc  boundarys.h
src/l5player_functions/carla_l5player_nop_with_python_script/src/planning/path/: FrenetPath.cc  FrenetPath.h  path_matcher.cc  path_matcher.h  path_points.cc  path_points.h  plan_init.h  trajectoryPoint.cc  trajectoryPoint.h
src/l5player_functions/carla_l5player_nop_with_python_script/unit_test/: CMakeLists.txt
src/l5player_functions/carla_l5player_nop_with_python_script/unit_test/planning/: VehicleControlPublisher_test.cc
(+88 files in other folders)
