<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_l5player_bridge_ego_vis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="l5player@163.com">l5player</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <exec_depend condition="$ROS_VERSION == 2">tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
